# freemocap

./: .codecov.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  404.html  AUTHORS.rst  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Cam1  Cam2  Cam3  Cam4  Cam5  Dockerfile  Dockerfile.python  Dockerfile.ui  MANIFEST.in  MULTI_SOCKET_REFACTOR.md  OLD_README.md  README.md  README.rst  RUN_ME.py  TESTING.md  TODO-desired-state-refactor.md  YOLO_pipeline_env_setup_instructions.md  YOLO_pipeline_function_details.md  YOLO_requirements.txt  bash.exe.stackdump  docker-compose.yml  fmc-env.yml  fmc-mp-dlc-env.yml  freemocap.spec  freemocap_datahandler_script.py  (+28 more)
.claude/: settings.local.json
.github/: dependabot.yml  diagnostics.yml  diagnostics_ubuntu.yml  path_check.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-installers-pyinstaller.yml  build.yml  build_linux.yml  build_mac_intel.yml  build_windows.yml  ci.yml  codeql-analysis.yml  coverage-testing.yml  data_diagnostics.yml  deploy-docs.yml  dev_diagnostics_multi_system.yml  diagnostics.yml  diagnostics_calibration.yml  diagnostics_multi_system.yml  diagnostics_ubuntu.yml  flit_publish_to_pypi.yml  lint_actions_zizmor.yml  linting-flake8.yml  linux_installer.yml  mac_installer.yml  nox-testing.yml  path_check.yml  poetry_publish_to_pypi.yml  publish_to_pypi.yml  publish_to_pypi_when_new_tag_is_pushed_to_main.yml  python-app.yml  python-testing.yml  test-bucket.yml  test.yml  version-testing-1.yml  version-testing-2.yml  version-testing.yml  windows_installer.yml
DLC_Models/PinkGreenRedJugglingBalls-JSM-2021-05-31/: config.yaml
app-design-v2/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
app-design-v2/src/: App.css  App.tsx  AppContent.tsx  electron.d.ts  index.css  main.tsx
docs/: Makefile  about_us.md  friendly_handholding_tutorials.md  glossary.md  index.md  make.bat  python_reference.md  troubleshooting.md
docs/source/: conf.py  index.rst  installation.rst  min_versions.rst  release-history.rst  usage.rst
experimental/: cam-check.html  clone_a_list_of_repos.py  directory_view.py  rerun_playground.py  set_groundplane_with_charuco.py  tool_bar.py  tree_view_scratch.py
experimental/alternative_trackers/: run_openpose.py  run_yolo.py
experimental/benchmark/: README.md  (+1 more)
freemocap/: __init__.py  __main__.py  _version.py  app.py  build_data.npy  build_info.py  calculator_error.json  calibrate.py  createvideo.py  cv.yml  datastruct_formatter.py  dlc.py  fmc_anipose.py  fmc_blender.py  fmc_deeplabcut.py  fmc_demo.py  fmc_good_frame_finder.py  fmc_maya_tools.py  fmc_mediapipe.py  fmc_mediapipe_annotation.py  fmc_mediapipe_roboflow.py  fmc_openpose.py  fmc_origin_alignment.py  fmc_pyqtgraph.py  fmc_runme.py  fmc_skeleton_data_holder.py  fmc_trackdata_handler.py  freemocap_blender_megascript.py  icon_support.py  initialization.py  openpose_data_mappings.py  parameters.yaml  play_skeleton_animation.py  playskeleton.py  reconstruct3D.py  recordingconfig.py  rich_gui.py  run_freemocap_server.py  runcams.py  runme.py  (+10 more)
freemocap-docs/: content.config.tsx  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
freemocap-rust/: Cargo.toml  freemocap-rust-README.md  pyproject.toml
freemocap-rust/.cargo/: config.toml
freemocap-rust/src/: cli.rs  lib.rs  main.rs
freemocap-rust/src/api/: freemocap-api-README.md  mod.rs  router.rs  routes.rs  state.rs
freemocap-rust/src/filtering/: mod.rs  one_euro.rs  skeleton_filter.rs  velocity_gate.rs
freemocap-rust/src/pipeline/: aggregator.rs  camera_node.rs  config.rs  distributor.rs  freemocap-pipeline-README.md  mod.rs  stats.rs  types.rs
freemocap-rust/src/pipeline_manager/: freemocap-pipeline-manager-README.md  mod.rs
freemocap-rust/src/pyo3_bridge/: freemocap-pyo3-bridge-README.md  mod.rs  py_pipeline.rs  py_realtime_engine.rs  types.rs
freemocap-rust/src/tests/: all_tests.rs  calibration_tests.rs  charuco_tests.rs  detect_tests.rs  filtering_tests.rs  mod.rs  pipeline_tests.rs  video_tests.rs
freemocap-rust/src/triangulation/: calibration_loader.rs  charuco.rs  dlt.rs  integration_test.rs  mod.rs  outlier_rejection.rs
freemocap-rust/src/video_reader/: dispatcher.rs  mod.rs  pipeline_test.rs  reader.rs
freemocap-ui/: .gitignore  .npmrc  README.md  config-overrides.js  electron-builder.json  entitlements.mac.plist  index.html  jsconfig.json  package-lock.json  package.json  playwright.config.ts  screenshot.mjs  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
freemocap-ui-old/: .gitignore  README.md  electron-builder.json  electron-builder.json5  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
freemocap-ui-tauri/: package.json  pnpm-lock.yaml  vite.config.ts
freemocap_blender_addon/: .gitignore  README.md  freemocap_blendARmocap_not_so_megascript.py  install_dependencies_to_blenders_python.py  load_freemocap_data_into_blender.py  makefile  package.py  requirements.txt
freemocap_web/: __main__.py  folders.py
ipython_jupyter_notebooks/: batch_process_session_folders.ipynb  export_freemocap_npy_as_pandas_data_frame_csv.ipynb  freemocap_data_visuals_template.ipynb  notebook_generator.py  rotate_translate_skeleton.ipynb  timeseries_plotter.ipynb
jon_scratch/: __init__.py  calculate_head_rotation_matrix.ipynb  create_retina_centered_video_from_pupil_labs_data.ipynb  examine_timestamps.ipynb  freemocap_plotly.py  karls_pupil_freemocap_code.ipynb  matplotlib_laser_skeleton.py  multi_camera_handler.py  opencv_camera.py  run_window.py  tensorflow_gpu_tester.py
notes/: left-ui-outline.md
planning/: 2022-05-21_planning_notes.md  alpha_pipline_planning_notes.md
scripts/: compare_calibrations.py  run_posthoc_calibration.py  run_posthoc_calibration_comparison.py  run_tests.sh
search/: search_index.json
src/: README.md  __init__.py  config.py
venv-ui/: pyvenv.cfg
(+3244 files in other folders)
