[project]
name = "freemocap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    #    "aniposelib>=0.7.0",
    "numba>=0.65.1",
    "libsass>=0.23.0",
    "opencv-contrib-python",#==4.10.*",
    "pyinstaller>=6.11.0",
    "requests>=2.32.3",
    "pydantic>=2.10.4",
    "numpydantic>=1.6.7",
    "scikit-learn>=1.7.2",
    "tomli-w>=1.2.0",
    "scipy-stubs~=1.17.1",
    "beartype>=0.19",
    "msgspec>=0.19",
    #sub-skellies
    "freemocap_blender_addon",
    "skellycam",
    "skellyforge",
    #    "skellytracker[rtmpose-gpu]",
    #    "skellytracker[mediapipe]",
    "skellytracker[all-cuda]; sys_platform != 'darwin'",
    "skellytracker[all-cpu]; sys_platform == 'darwin'",
    #skelly utils
    "skellylogs",
    "skellypings",
    #    "skellymodels",
]

[tool.uv.sources]
skellycam = { git = "https://github.com/freemocap/skellycam", branch = "development" }
skellytracker = { git = "https://github.com/freemocap/skellytracker", branch = "development"}
skellyforge = { git = "https://github.com/freemocap/skellyforge", branch = "development" }
freemocap_blender_addon = { git = "https://github.com/freemocap/freemocap_blender_addon", branch = "development" }

skellylogs = { git = "https://github.com/freemocap/skellylogs" }
skellypings = { git = "https://github.com/freemocap/skellypings" }
#skellymodels = { git = "https://github.com/freemocap/skellymodels" }

[project.scripts]
freemocap = "freemocap.__main__:run_main"
[tool.setuptools]
packages = ["freemocap"]

  [tool.uv]
  package = true
  environments = [
      "sys_platform == 'darwin'",
      "sys_platform == 'linux' and platform_machine == 'x86_64'",
      "sys_platform == 'win32' and platform_machine == 'AMD64'",
  ]
  override-dependencies = [
      "numpy>=2.3.4,<2.5",  # <2.5: NumPy 2.5 changed ScalarT internals, breaking beartype's NDArray introspection
  ]

  # This project uses opencv-contrib-python (a superset of opencv-python); having
  # both installed causes a file-collision error.
  exclude-dependencies = ["opencv-python"]

  [[tool.uv.index]]
  name = "nvidia"
  url = "https://pypi.nvidia.com"

# rtmlib==0.0.14 hard-depends on the CPU `onnxruntime` package. skellytracker[all-cuda]
# pulls in `onnxruntime-gpu`. Both share the same top-level `onnxruntime` import and
# cannot coexist on disk — whichever installs last clobbers the other's
# `onnxruntime_pybind11_state.pyd`, so the CPU build wins and CUDA/TensorRT execution
# providers disappear from `onnxruntime.get_available_providers()`.
#
# `[[tool.uv.dependency-metadata]]` is only honored for the root project, so
# skellytracker's own copy of this override does not apply when freemocap resolves —
# it must be repeated here to strip rtmlib's onnxruntime dep from the resolution graph.
# rtmlib still imports fine at runtime because onnxruntime-gpu satisfies the import.
#
# [[tool.uv.dependency-metadata]] must come after all plain [tool.uv] keys because
# TOML array tables absorb subsequent sibling keys into their scope.
[[tool.uv.dependency-metadata]]
name = "rtmlib"
version = "0.0.14"
requires-dist = ["numpy", "opencv-contrib-python", "opencv-python", "tqdm"]

[tool.bumpver]
current_version = "v1.4.7"
version_pattern = "vMAJOR.MINOR.PATCH[-TAG]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
#"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"freemocap/__init__.py" = ["{version}"]
".github/workflows/*_installer.yml" = ['export PYAPP_PROJECT_VERSION={version}']




# =============================================================================
# Dev dependencies
# =============================================================================
# Install with:  uv sync --group dev
# =============================================================================

[dependency-groups]
pyceres = [
    "pyceres>=2.5",
]
dev = [
    "bumpver",
    "pip-tools",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-timeout>=2.0.0",
    "httpx>=0.28.0",
    "pyinstaller>=6.15.0",
    "ruff>=0.9.0",
    "poethepoet>=0.32.0",
]
# Poe the Poet tasks live in poe_tasks.toml
# Run with:   uv run poe <task-name>       (e.g. uv run poe update)
# List all:   uv run poe --help


# =============================================================================
# Pytest config
# =============================================================================

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"
markers = [
    "e2e: end-to-end tests that run real pipelines against on-disk test data (freemocap_test_data)",
    "slow: slow tests (e.g. realtime full-skeleton RTMPose inference over all frames)",
]


# =============================================================================
# Ruff linter config
# =============================================================================
# TC rules move imports that are ONLY used in type annotations behind an
# `if TYPE_CHECKING:` block, so they don't execute at runtime. This makes
# multiprocessing child process spawns faster (fewer files to import).
#
# Ruff automatically detects and preserves imports used in:
#   - isinstance() / issubclass() calls
#   - Base classes
#   - Default values and runtime expressions
#   - Pydantic field types (via runtime-evaluated-base-classes below)
#   - Dataclass field types (via runtime-evaluated-decorators below)
#
# If ruff incorrectly flags an import that IS needed at runtime,
# add  # noqa: TC003  (or TC001/TC002) to that import line.
# =============================================================================

[tool.ruff.lint]
select = [
    "TC",    # flake8-type-checking: move type-only imports behind TYPE_CHECKING
]

[tool.ruff.lint.flake8-type-checking]
# Pydantic evaluates field type annotations at runtime for validation/serialization.
# Imports used as field types on these base classes must NOT be moved behind
# TYPE_CHECKING or Pydantic will fail at class creation.
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic.BaseSettings",
]
runtime-evaluated-decorators = [
    "dataclasses.dataclass",
]
exempt-modules = ["typing", "typing_extensions"]
